[package]
name = "radio-s2lp"
description = "Driver for the ST S2-LP Sub 1GHz ISM band radio IC"
version = "0.1.0"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
edition = "2021"

[workspace]
members = ["util"]

[dependencies]
embedded-hal = "=1.0.0-alpha.5"
radio = "0.10.0"
modular-bitfield = "0.11.2"
log = "0.4.14"
num_enum = "0.5.4"
# Optional features
thiserror = { version = "1.0.30", optional = true }
serde = { version = "1.0.130", optional = true }
defmt = { version = "0.2.3", optional = true }

[dev-dependencies]
embedded-hal-mock = { version = "0.8.0" }
simplelog = "0.5.3"

[patch.crates-io]
